# Python-Template

./: README.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: example_package_project-ci.yaml  release.yaml
docs/: index.md  installation.md
docs/source/: conf.py
src/example_package_YOUR_USERNAME_HERE/: example.py
tests/: conftest.py
tests/test_example_package_YOUR_USERNAME_HERE/: test_example.py
